--- a/client/styles.scss
+++ b/client/styles.scss
@@ -1,3 +1,4 @@
+$shSm: 2px 2px 4px rgba(0, 0, 0, 0.35), 2px 2px 6px rgba(0, 0, 0, 0.25);
 $shLg: 6px 6px 10px rgba(0, 0, 0, 0.35), 8px 8px 10px rgba(0, 0, 0, 0.25);
 
 * {
@@ -45,4 +46,39 @@ button {
 .highlighted {
   color: blue;
   cursor: pointer;
+}
+
+.loading {
+  width: max;
+  height: 200px;
+  border: 2px solid #0c0c0c;
+  border-radius: 6px;
+  box-shadow: $shLg;
+}
+.shared-layout {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header {
+  width: 100%;
+  min-width: 100vw;
+  position: absolute;
+  top: 0%;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-logo {
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  box-shadow: $shSm;
 }
